--- a/index.html
+++ b/index.html
@@ -24,7 +24,38 @@
 
     <section id="hero">
         <h4>Bem-vindo ao Paraíso dos Sneakers Premium</h4>
-        <h2>Descubra a Excelência em Cada Passo</h2>
+        <h2>Descubra a Excelência</h2> 
+        <h1>Em cada passo</h1>
+        <p>Aproveite as promoções!</p>
+        <button id="btn-buy">Compre agora</button>
+    </section>
+
+    <section id="feature" class="section-p1">
+        <div class="fe-card">
+            <img src="assets/products/card1.png" alt="Card 1 SNKR">
+            <h2>Air Footscape Woven</h2>
+            <h3>Natural and Brown</h3>
+        </div>
+        <div class="fe-card">
+            <img src="assets/products/card2.png" alt="Card 2 SNKR">
+            <h2>Air Jordan 4 Retro</h2>
+            <h3>Red Cement</h3>
+        </div>
+        <div class="fe-card">
+            <img src="assets/products/card3.png" alt="Card 3 SNKR">
+            <h2>Air Max 1</h2>
+            <h3>Deep Royal Blue</h3>
+        </div>
+        <div class="fe-card">
+            <img src="assets/products/card4.png" alt="Card 4 SNKR">
+            <h2>Dunk Low</h2>
+            <h3>University Red</h3>
+        </div>
+        <div class="fe-card">
+            <img src="assets/products/card5.png" alt="Card 5 SNKR">
+            <h2>Women's Cortez PRM</h2>
+            <h3>World Make</h3>
+        </div>
     </section>
     
 </body>
