--- a/index.html
+++ b/index.html
@@ -57,6 +57,141 @@
             <h3>World Make</h3>
         </div>
     </section>
+
+    <section id="product1" class="section-p1">
+        <h2>Produtos em alta</h2>
+        <p>Descubra a Coleção Exclusiva de Tênis Premium</p>
+        <div class="product-container">
+            <div class="product">
+                <img class="img-object" src="assets/products/prod1.png" alt="product 1">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Dunk Jumbo Mushroom</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$899,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="assets/products/prod2.png" alt="product 2">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Terminator Low Velvet Brown</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$1099,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="assets/products/prod3.png" alt="product 3">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h3>Adi 2000</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$799,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="assets/products/prod4.png" alt="product 4">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Air Force 1 Low Retro</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$1399,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="assets/products/prod5.png" alt="product 5">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h3>Ozweego</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$999,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="assets/products/prod6.avif" alt="product 6">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Air Vapormax Triple Black</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$999,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="assets/products/prod7.png" alt="product 7">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h3>Forum Mod Low</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$899,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="assets/products/prod8.avif" alt="product 8">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Air Jordan 1 Low GS Rabbit</h3>
+                    <div class="star">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                        <img src="assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$999,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+        </div>
+    </section>
     
 </body>
 <script src="script.js"></script>
