[add] Banner section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,13 @@
             </div>
         </div>
     </section>
+
+    <section id="banner">
+        <div id="content">
+            <h2>AIR MAX '98</h4>
+        </div>
+        <button>Confira</button>
+    </section>
     
 </body>
 <script src="script.js"></script>
