--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div>
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
-                <li><a href="shop.html">Shop</a></li>
+                <li><a href="pages-html/shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">Sobre</a></li>
                 <li><a href="contact.html">Contato</a></li>
@@ -217,6 +217,43 @@
             </div>  
             
         </div>           
+    </section>
+
+    <section id="footer">
+        <div class="ft-container"> <!--container-->
+            <div class="footer-col">
+                <h4>Encontre uma loja</h4>
+                <ul>
+                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="#">Serviços</a></li>
+
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Ajuda</h4>
+                <ul>
+                    <li><a href="#">Encontre seu tamanho</a></li>
+                    <li><a href="#">Entregas</a></li>
+                    <li><a href="#">Pedidos</a></li>
+                    <li><a href="#">Fale conosco</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Marcas</h4>
+                <ul>
+                    <li><a href="#">Nike</a></li>
+                    <li><a href="#">Adidas</a></li>
+                </ul>
+            </div> 
+            <div class="footer-col">
+                <h4>Redes Sociais</h4>
+                <ul id="ul-redes">
+                    <li><a href="#"><img class="fontawesome-icon" src="assets/icons/instagram.svg" alt="insta-icon"></a></li>
+                    <li><a href="#"><img class="fontawesome-icon" src="assets/icons/facebook.svg" alt="face-icon"></a></li>
+                    <li><a href="#"><img class="fontawesome-icon" src="assets/icons/youtube.svg" alt="youtube-icon"></a></li>
+                </ul>
+            </div> 
+        </div>       
     </section>
     
 </body>
