--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <ul id="navbar">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="pages-html/shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">Sobre</a></li>
+                <li><a href="pages-html/blog.html">Blog</a></li>
+                <li><a href="pages-html/about.html">Sobre</a></li>
                 <li><a href="contact.html">Contato</a></li>
                 <li><a href="cart.html"><img src="assets/icons/cart-shopping-solid.png" class="cart-icon" alt="Carrinho de compras icon"></a></li>
             </ul>   
