--- a/pages-html/shop.html
+++ b/pages-html/shop.html
@@ -4,10 +4,198 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
-</head>
-<body>
+    <link rel="stylesheet" href="../style.css">
 
-    
+    <section id="header">
+        <a href="../index.html"><img src="../assets/icons/logoSNKHD.png" alt="logoSNKHD" class="logo"></a>
+        <div>
+            <ul id="navbar">
+                <li><a href="../index.html">Home</a></li>
+                <li><a class="active" href="pages-html/shop.html">Shop</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">Sobre</a></li>
+                <li><a href="contact.html">Contato</a></li>
+                <li><a href="cart.html"><img src="../assets/icons/cart-shopping-solid.png" class="cart-icon" alt="Carrinho de compras icon"></a></li>
+            </ul>  
+        </div>       
+    </section>
+
+    <section id="product1" class="section-p1">
+        <h2>Produtos em alta</h2>
+        <p>Descubra a Coleção Exclusiva de Tênis Premium</p>
+        <form action="#">
+            <input type="text" id="search-box" placeholder="Buscar">
+        </form>
+        <div class="product-container">
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod1.png" alt="product 1">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Dunk Jumbo Mushroom</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$899,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod2.png" alt="product 2">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Terminator Low Velvet Brown</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$1099,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod3.png" alt="product 3">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h3>Adi 2000</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$799,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod4.png" alt="product 4">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Air Force 1 Low Retro</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$1399,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod5.png" alt="product 5">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h3>Ozweego</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$999,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod6.avif" alt="product 6">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Air Vapormax Triple Black</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$999,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod7.png" alt="product 7">
+                <div class="description">
+                    <span>Adidas</span>
+                    <h3>Forum Mod Low</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$899,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+            <div class="product">
+                <img class="img-object" src="../assets/products/prod8.avif" alt="product 8">
+                <div class="description">
+                    <span>Nike</span>
+                    <h3>Air Jordan 1 Low GS Rabbit</h3>
+                    <div class="star">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                        <img src="../assets/icons/star-solid.png" alt="">
+                    </div>
+                    <h4>R$999,99</h4>
+                </div>
+                <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
+            </div>
+        </div>
+    </section>
+
+    <section id="footer">
+        <div class="ft-container"> <!--container-->
+            <div class="footer-col">
+                <h4>Encontre uma loja</h4>
+                <ul>
+                    <li><a href="#">Sobre nós</a></li>
+                    <li><a href="#">Serviços</a></li>
+
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Ajuda</h4>
+                <ul>
+                    <li><a href="#">Encontre seu tamanho</a></li>
+                    <li><a href="#">Entregas</a></li>
+                    <li><a href="#">Pedidos</a></li>
+                    <li><a href="#">Fale conosco</a></li>
+                </ul>
+            </div>
+            <div class="footer-col">
+                <h4>Marcas</h4>
+                <ul>
+                    <li><a href="#">Nike</a></li>
+                    <li><a href="#">Adidas</a></li>
+                </ul>
+            </div> 
+            <div class="footer-col">
+                <h4>Redes Sociais</h4>
+                <ul id="ul-redes">
+                    <li><a href="#"><img class="fontawesome-icon" src="../assets/icons/instagram.svg" alt="insta-icon"></a></li>
+                    <li><a href="#"><img class="fontawesome-icon" src="../assets/icons/facebook.svg" alt="face-icon"></a></li>
+                    <li><a href="#"><img class="fontawesome-icon" src="../assets/icons/youtube.svg" alt="youtube-icon"></a></li>
+                </ul>
+            </div> 
+        </div>       
+    </section>
+
+
     
 </body>
 </html>
