[add] Começo sproduct

--- a/pages-html/about.html
+++ b/pages-html/about.html
@@ -22,6 +22,16 @@
         </div>       
     </section>
 
+    <section id="history">
+        <h2>A História da SneakerHead</h2>
+        <div class="history-content">
+            <h4>A SneakerHead nasceu de uma paixão incontrolável por tênis premium e um profundo respeito pela cultura sneaker. Fundada por um grupo de entusiastas de calçados em [ano de fundação], nossa marca surgiu da convicção de que os sneakers são mais do que apenas calçados; eles são uma forma de expressão e um símbolo de estilo de vida.</h4>
+            <h4>Desde o início, nossa missão foi clara: compartilhar a nossa devoção pela qualidade, design e autenticidade dos sneakers premium com o mundo. Através de uma curadoria criteriosa e uma parceria com algumas das marcas mais icônicas do mercado, construímos uma coleção que celebra a inovação, a criatividade e a influência cultural dos sneakers.</h4>
+            <h4>À medida que crescemos, continuamos comprometidos em oferecer uma experiência de compra excepcional para todos os amantes de tênis. Hoje, a SneakerHead é mais do que uma loja de calçados; somos uma comunidade de entusiastas que compartilham a mesma paixão. O nosso legado é moldado por nossa dedicação ao estilo, à qualidade e à autenticidade - valores que permanecem no centro de tudo o que fazemos.</h4>
+            <h4>Junte-se a nós nesta jornada contínua em busca dos sneakers mais premium e exclusivos, e descubra como cada par pode ser uma obra de arte em seus próprios pés. Na SneakerHead, a nossa história está em cada passo que você dá.</h4>
+        </div>
+    </section>
+
     
 
     <section id="footer">
