[add] Inicio JS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <li><a href="pages-html/shop.html">Shop</a></li>
                 <li><a href="pages-html/blog.html">Blog</a></li>
                 <li><a href="pages-html/about.html">Sobre</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="pages-html/contact.html">Contato</a></li>
                 <li><a href="cart.html"><img src="assets/icons/cart-shopping-solid.png" class="cart-icon" alt="Carrinho de compras icon"></a></li>
             </ul>   
         </div>       
@@ -27,7 +27,7 @@
         <h2>Descubra a Excelência</h2> 
         <h1>Em cada passo</h1>
         <p>Aproveite as promoções!</p>
-        <button id="btn-buy">Compre agora</button>
+        <button id="btn-buy" class="botao">Compre agora</button>
     </section>
 
     <section id="feature" class="section-p1">
