[add] Cart Page

--- a/pages-html/shop.html
+++ b/pages-html/shop.html
@@ -30,11 +30,11 @@
         <h2>Produtos em alta</h2>
         <p>Descubra a Coleção Exclusiva de Tênis Premium</p>
         <div class="product-container">
-            <div class="product" onclick="info(0)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod1.png" alt="product 1">
                 <div class="description">
                     <span>Nike</span>
-                    <h3>Dunk Jumbo Mushroom</h3>
+                    <h3 class="title-object">Dunk Jumbo Mushroom</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -42,15 +42,15 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$899,99</h4>
+                    <h4 class="price-object">R$899,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
-            <div class="product" onclick="info(1)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod2.png" alt="product 2">
                 <div class="description">
                     <span>Nike</span>
-                    <h3>Terminator Low Velvet Brown</h3>
+                    <h3 class="title-object">Terminator Low Velvet Brown</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -58,15 +58,15 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$1099,99</h4>
+                    <h4 class="price-object">R$1099,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
-            <div class="product" onclick="info(2)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod3.png" alt="product 3">
                 <div class="description">
                     <span>Adidas</span>
-                    <h3>Adi 2000</h3>
+                    <h3 class="title-object">Adi 2000</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -74,15 +74,15 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$799,99</h4>
+                    <h4 class="price-object">R$799,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
-            <div class="product" onclick="info(3)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod4.png" alt="product 4">
                 <div class="description">
                     <span>Nike</span>
-                    <h3>Air Force 1 Low Retro</h3>
+                    <h3 class="title-object">Air Force 1 Low Retro</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -90,15 +90,15 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$1399,99</h4>
+                    <h4 class="price-object">R$1399,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
-            <div class="product" onclick="info(4)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod5.png" alt="product 5">
                 <div class="description">
                     <span>Adidas</span>
-                    <h3>Ozweego</h3>
+                    <h3 class="title-object">Ozweego</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -106,15 +106,15 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$999,99</h4>
+                    <h4 class="price-object">R$999,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
-            <div class="product" onclick="info(5)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod6.avif" alt="product 6">
                 <div class="description">
                     <span>Nike</span>
-                    <h3>Air Vapormax Triple Black</h3>
+                    <h3 class="title-object">Air Vapormax Triple Black</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -122,15 +122,15 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$999,99</h4>
+                    <h4 class="price-object">R$999,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
-            <div class="product" onclick="info(6)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod7.png" alt="product 7">
                 <div class="description">
                     <span>Adidas</span>
-                    <h3>Forum Mod Low</h3>
+                    <h3 class="title-object">Forum Mod Low</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -138,15 +138,15 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$899,99</h4>
+                    <h4 class="price-object">R$899,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
-            <div class="product" onclick="info(7)">
+            <div class="product">
                 <img class="img-object" src="../assets/products/prod8.avif" alt="product 8">
                 <div class="description">
                     <span>Nike</span>
-                    <h3>Air Jordan 1 Low GS Rabbit</h3>
+                    <h3 class="title-object">Air Jordan 1 Low GS Rabbit</h3>
                     <div class="star">
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
@@ -154,7 +154,7 @@
                         <img src="../assets/icons/star-solid.png" alt="">
                         <img src="../assets/icons/star-solid.png" alt="">
                     </div>
-                    <h4>R$999,99</h4>
+                    <h4 class="price-object">R$999,99</h4>
                 </div>
                 <a href="#"><img class="cart" src="../assets/icons/cart-shopping-solid.png" alt="Carrinho"></a>
             </div>
