--- a/pages-html/sproduct.html
+++ b/pages-html/sproduct.html
@@ -16,19 +16,19 @@
                 <li><a class="active" href="pages-html/shop.html">Shop</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="about.html">Sobre</a></li>
-                <li><a href="contact.html">Contato</a></li>
+                <li><a href="pages-html/contact.html">Contato</a></li>
                 <li><a href="cart.html"><img src="../assets/icons/cart-shopping-solid.png" class="cart-icon" alt="Carrinho de compras icon"></a></li>
             </ul>  
         </div>       
     </section>
 
-    <section id="prodetails" class="section-p1">
+     <section id="prodetails" class="section-p1">
         <div class="single-pro-image">
-            <img src="../index()" alt="" id="MainImg" width="100%">
+            <img src="../assets/products/prod1.png" alt="" id="MainImg" width="100%">
         </div>
         <div class="single-pro-details">
             <h6 id="title">Home / Nike Dunk</h6>
-            <h4 id="prod-name">Dunk Jumbo Mushroom</h4>
+            <h4 id="prod-names">Dunk Jumbo Mushroom</h4>
             <h2 id="price">R$899,99</h2>
             <div id="sel-input-row">
                 <select>
@@ -47,11 +47,6 @@
                 <input type="number" value="1">
             </div>
             <button class="botao">Adicionar ao carrinho</button>
-            <span>Seu visual favorito fica grande e ousado. A marca extra grande exagera o visual clássico, 
-                enquanto a unidade Air Strobel coloca amortecimento logo abaixo dos seus pés. E se isso não for suficiente, 
-                a construção da língua "de dentro para fora" e o novo sistema de amarração trazem um novo visual personalizável.</span>
-        </div>    
-    </section>
 
     <section id="product1" class="section-p1">
         <h2>Novos produtos</h2>
