--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="pages-html/blog.html">Blog</a></li>
                 <li><a href="pages-html/about.html">Sobre</a></li>
                 <li><a href="pages-html/contact.html">Contato</a></li>
-                <li><a href="cart.html"><img src="assets/icons/cart-shopping-solid.png" class="cart-icon" alt="Carrinho de compras icon"></a></li>
+                <li><a href="pages-html/cart.html"><img src="assets/icons/cart-shopping-solid.png" class="cart-icon" alt="Carrinho de compras icon"></a></li>
             </ul>   
         </div>       
     </section>
