[add] Inicio JS Cart

--- a/pages-html/cart.html
+++ b/pages-html/cart.html
@@ -35,7 +35,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td><a href="#"><img src="../assets/icons/xmark-solid.svg" width="20px"
+                    <td class="remove-icon"><a href="#"><img src="../assets/icons/xmark-solid.svg" width="20px"
                     height="20px" alt=""></a></td>
                     <td><img src="../assets/products/prod1.png" alt=""></td>
                     <td>Dunk Jumbo Mushroom</td>
@@ -44,7 +44,7 @@
                     <td>R$ 899,99</td>
                 </tr>
                 <tr>
-                    <td><a href="#"><img src="../assets/icons/xmark-solid.svg" width="20px"
+                    <td class="remove-icon"><a href="#"><img src="../assets/icons/xmark-solid.svg" width="20px"
                     height="20px" alt=""></a></td>
                     <td><img src="../assets/products/prod8.avif" alt=""></td>
                     <td>Air Jordan 1 Low GS Rabbit</td>
@@ -53,7 +53,7 @@
                     <td>R$ 999,99</td>
                 </tr>
                 <tr>
-                    <td><a href="#"><img src="../assets/icons/xmark-solid.svg" width="20px"
+                    <td class="remove-icon"><a href="#"><img src="../assets/icons/xmark-solid.svg" width="20px"
                     height="20px" alt=""></a></td>
                     <td><img src="../assets/products/prod4.png" alt=""></td>
                     <td>Air Force 1 Low Retro</td>
@@ -131,4 +131,5 @@
     </section>
     
 </body>
+<script src="../script.js"></script>
 </html>
